--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://devopsthink.org/"
-DefaultContentLanguage = "en" # Theme's display language, supports: en, fr, zh, zh-hant
-languageCode = "en-us"
-title = "A Hugo Site"
+DefaultContentLanguage = "zh" # Theme's display language, supports: en, fr, zh, zh-hant
+languageCode = "zh-cn"
+title = "总要记录些什么"
 copyright = "This is a customized copyright."
 theme = "diary"
 # googleAnalytics = "UA-123-45"
@@ -19,7 +19,7 @@ theme = "diary"
     tabWidth = 4
 
 [params]
-subtitle = "Themed by Diary."
+subtitle = "My Blog"
 enableGitalk = false
 enableGiscus = true
 
@@ -47,7 +47,7 @@ theme="github-light"
 # Please visit https://giscus.app/ to generate settings.
 [params.giscus]
     data_repo="username/repo"
-    data-repo-id="**************************"    
+    data-repo-id="**************************"
     data_category="General"
     data_category_id="*********************"
     data_mapping="pathname"
@@ -75,4 +75,8 @@ weight = 1
 [[menu.main]]
 url = "/index.xml"
 name = "RSS Feed"
-weight = 4
+weight = 5
+# [[menu.main]]
+# url = "/about/index.md"
+# name = "About"
+# weight = 4
